# tap-salesforce

./: .env.template  .gitignore  .pre-commit-config.yaml  .prettierrc  Blacklisting.md  CHANGELOG.md  CONTRIBUTING.md  README.md  meltano.yml  pyproject.toml  ruff.toml  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
tap_salesforce/: __init__.py  config.py  discovery.py  sync.py  sync_orchestrator.py
tap_salesforce/salesforce/: __init__.py  browser_auth.py  bulk.py  bulk2.py  client.py  credentials.py  exceptions.py  rest.py  schema.py  token_cache.py
tests/: test_browser_auth.py  test_bulk.py  test_bulk2.py  test_config.py  test_credentials.py  test_discovery.py  test_rest.py  test_salesforce_client.py  test_schema.py  test_sync.py  test_sync_orchestrator.py  test_token_cache.py
