[tool.poetry]
name = "tap-salesforce"
version = "1.9.0"
description = "Singer.io tap for extracting data from the Salesforce API"
authors = ["Stitch <hello@stitchdata.com>"]
readme = "README.md"
homepage = "https://singer.io"
repository = "https://github.com/dlouseiro/tap-salesforce"
packages = [{ include = "tap_salesforce" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "==2.34.2"
singer-python = "^6.8"
xmltodict = "==1.0.4"
simple-salesforce = "^1.12"
idna = "==3.18"
cryptography = "*"
pyOpenSSL = "*"
# Only needed for the interactive browser (Authorization Code + PKCE) auth
# flow. Lets the refresh-token cache use the OS keychain instead of a plain
# file. Cron/prod installs using Client Credentials or the legacy password
# flow never need this -- install with `pip install tap-salesforce[browser]`
# or `poetry install --extras browser`.
keyring = { version = "*", optional = true }

[tool.poetry.extras]
browser = ["keyring"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
tox = "*"
pre-commit = "*"

[tool.poetry.scripts]
tap-salesforce = "tap_salesforce:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle (errors)
    "W",    # pycodestyle (warnings)
    "C90",  # mccabe
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "PIE",  # flake8-pie
    "YTT",  # flake8-2020
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "PERF", # Perflint
    "RUF",  # Ruff-specific rules
]
